--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,8 @@
 }
 
 .container {
-  position: absolute; /* Cambiado a relativo para que los elementos internos se posicionen correctamente */
+  width: 100%;
   text-align: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 0%);
 }
 
 .logo:hover {
@@ -19,11 +16,11 @@
 }
 
 .typewriter {
-  position: absolute; /* Cambiado a relativo para que se posicione correctamente dentro del contenedor */
-  flex-direction: column; /* Alinear los elementos verticalmente */
-  left: 50%;
-  align-items: center; /* Alinear los elementos horizontalmente */
-  transform: translate(-50%);
+
+  align-content: center;
+  text-align: center;
+  margin-bottom: 8rem;
+  margin-top: 8rem;
 }
 
 .gameicon {
@@ -38,17 +35,33 @@
   font-size: 3em; /* Reducido el tamaño de la fuente para dispositivos más pequeños */
 }
 
-.icon {
-  text-align: center;
-  transform: scale(3);
-  position: absolute;
-  transform: scale(5);
-  bottom: 40%;
-  left: -90%;
+
+
+.textarea {
+  width: 100%;
+  border: none;
+  resize: none;
+  font-family: Consolas, monospace;
+  font-size: 14px;
+  line-height: 20px;
+  outline: none;
+  background-color: transparent;
 }
 
-.icon2 {
-  transform: scale(3);
+.codecontainer {
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  min-height: 200px;
+}
+
+.supracontainer {
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 @media screen and (min-width: 768px) {
@@ -56,21 +69,17 @@
   .logo {
     width: 100em; /* Ajustar el ancho para pantallas más grandes */
   }
-  .gameicon{
 
+  .codecontainer {
+    width: 50%;
+  }
+  .gameicon{
     width: 50%;
   }
   .typewriter{
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%, -50%);
-  }
-  .container{
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-content: center;
+    text-align: center;
+
   }
 
   .typewriter span {
