--- a/src/App.css
+++ b/src/App.css
@@ -17,12 +17,55 @@
   margin-right: 10%;
 }
 
+.datos{
+  text-align: center;
+}
+
+.datos button {
+  margin-bottom: 2%;
+  margin-left: 2%;
+}
+
+.datos input {
+  width: 40%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.console {
+  background-color: #110f11c7;
+  color: #fff;
+  font-family: monospace;
+  padding: 10px;
+  border-radius: 5px;
+  width: 70%;
+}
+
+.holder{
+  display: flex;
+  justify-content: center; /* Centra el contenido horizontalmente */
+  align-items: center;
+}
+
+.holder button {
+  margin-top: 2%;
+}
+
+.console-output {
+  text-align: start;
+  height: 200px;
+  overflow-y: auto;
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 0.5em #646cffaa); /* Reducido el tamaño de la sombra para que se vea mejor en dispositivos pequeños */
 }
 
 .typewriter {
-
   align-content: center;
   text-align: center;
   margin-bottom: 8rem;
@@ -92,7 +135,9 @@
     font-size: 4em; /* Reducido el tamaño de la fuente para dispositivos más pequeños */
   }
   
-  
+  .console {
+    width: 40%;
+  }
 
   .icon{
     position: absolute;
