--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   margin: 0 auto; /* Centrar horizontalmente */
 }
 
+input[type="checkbox"] {
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+}
+
 .container {
   width: 100%;
   text-align: center;
