--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ input[type="checkbox"] {
   display: flex;
   justify-content: center; /* Centra el contenido horizontalmente */
   align-items: center;
+  transform: translate();
 }
 
 .holder button {
